[package]
name = "nc-cli"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sec-data-parser = {path="../sec-data-parser"}
clap = "3.0.0-beta.2"
colored = "2.0.0"
